--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "rust_sandbox"
+name = "rustlang"
 version = "0.1.0"
-authors = ["Brad Traversy <traversymedia@gmail.com>"]
+authors = ["Pavel Bunin <p.bunin@roseltorg.ru>"]
 edition = "2018"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
